--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,3 +1,12 @@
 api_platform:
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
+    title:
+        "Junior_mais_pas_manchot_API"
+    version:
+        '1.0.0'
+    collection:
+        pagination:
+            enabled: false
+            items_per_page: 5
+            client_enabled: true
